docroot/themes/custom/transac/alshaya_bathbodyworks/sass/components/products/_product-detail.scss
// Title wrapper
.content {
  &__title_wrapper {
    h1,
    h1 span {
      font-weight: normal;
      color: $pdp_product_title;
      margin: 0.3125rem 0;
      text-transform: uppercase;
      font-size: 1rem;
    }

    .price {
      margin-bottom: 0.5rem;
    }

    .content--item-code {
      font-size: 0.625rem;
    }

    .content--brand {
      font-size: 0.75rem;
      color: $pdp_product_brand_text;
    }
  }

  &__main {
    &.slider-position-left {
      div:last-of-type {
        margin-bottom: 0;
      }
    }
  }

  &__sidebar {
    .content--size-volume {
      margin-top: 1rem;
      font-size: 0.875rem;
      color: $pdp_product_volume_value;

      .field__label {
        color: $pdp_product_volume_label;
      }
    }
  }
}

.content--form,
.product--form {
  float: $left;
  font-size: 0.75rem;
  margin-bottom: 0.9375rem;
  color: $pdp_product_form_text;
  width: 100%;
}

.description-wrapper {
  color: $pdp_sidebar_description;

  .field {
    &__label {
      font-weight: normal;
    }
  }

  .desc-label {
    font-weight: normal;
  }
}

.short-description-wrapper {
  color: $pdp_sidebar_description;

  .field {
    &__label {
      font-weight: normal;
    }
  }
}

.short-description-wrapper {
  .show-less-link,
  .read-more-description-link,
  .read-more-description-link-mobile {
    font-weight: normal;
    line-height: 1.33;
  }

  .show-less-link,
  .read-more-description-link {
    margin-top: 0.5rem;
  }
}

.delivery-options-wrapper {
  .field {
    &__label {
      font-weight: normal;
    }
  }

  .c-accordion {
    &__title {
      .subtitle {
        line-height: 1.33;
      }
    }
  }
}

.field--name {
  &-field-skus {
    .sku-base-form {
      button[type="submit"] {
        text-transform: uppercase;
      }
    }
  }
}

.nodetype--acq_product {
  .region__content {
    @include breakpoint($only-mobile) {
      margin: 0;
    }
  }
}

.store-finder-form-wrapper {
  .search-store {
    button {
      font-size: 0.75rem;
      text-transform: uppercase;
    }
  }
}

.click-collect-top-stores {
  ul {
    li {
      .store {
        &-sequence {
          line-height: 1.9;
        }
      }
    }
  }
}

.basic-details-wrapper .field--name-field-skus {
  .form-item-quantity {
    label {
      color: $pdp_product_qty_text;
      font-size: 0.875rem;
    }
  }
}

